--- a/src/main/resources/FilesPathsLocations.properties
+++ b/src/main/resources/FilesPathsLocations.properties
@@ -1,5 +1,6 @@
 #databases
 madaReports=src/main/resources/MadaReports.csv
+labTests=src/main/resources/LabTests.csv
 
 #csv to json
 madaSamplerFilesPath=src/main/madaSampler/mada
