Added new lines to configuration file

--- a/src/main/resources/FilesPathsLocations.properties
+++ b/src/main/resources/FilesPathsLocations.properties
@@ -4,3 +4,4 @@ labTests=src/main/resources/LabTests.csv
 
 #csv to json
 madaSamplerFilesPath=src/main/madaSampler/mada
+labTestsSaveFilesPath=src/main/labTests/labTests
